@@ -28,14 +28,23 @@ public:
 #include "translator.icc"
 
 ADD_TRANSLATOR (Default_bar_line_engraver,
-		"This engraver determines what kind of automatic bar lines should be produced, "
-		"and sets @code{whichBar} accordingly. It should be at the same "
+		"This engraver determines what kind of automatic bar "
+		"lines should be produced, "
+		"and sets @code{whichBar} "
+		"accordingly. It should be at the same "
 		"level as @ref{Timing_translator}. ",
+		
 		/* create */ "",
 		/* accept */ "",
+
 		/* read */
-		"measurePosition automaticBars whichBar barAlways defaultBarType "
-		"measureLength",
+		"automaticBars "
+		"barAlways "
+		"defaultBarType "
+		"measureLength "
+		"whichBar "
+		"measurePosition ",
+		
 		/* write */ "automaticBars");
 
 Default_bar_line_engraver::Default_bar_line_engraver ()
